# uorb-codec

./: Cargo.toml  LICENSE  README.md
benches/: read_write_bench.rs
src/: lib.rs
tests/: encode_decode_tests.rs  read_write_tests.rs  serialization_tests.rs
tests/test_shared/: mod.rs
