[package]
name = "uorb-codec"
version = "0.1.0"
authors = ["Todd Stellanova <tstellanova@users.noreply.github.com>"]
license = "BSD-3-Clause"
repository = "https://github.com/tstellanova/flighty"
edition = "2018"
build = "build/main.rs"


[build-dependencies]
quote = "0.6"
lazy_static = "1.2.0"
proc-macro2 = "0.4.27"
rustfmt = "0.9"
heck = "0.3.1"
crc16 = "0.4.0"

[dependencies]
bytes = "0.4.11"
byteorder = "1.3.1"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "read_write_bench"
harness = false



